--- a/bmg/vercel.json
+++ b/bmg/vercel.json
@@ -1,4 +1,3 @@
-{
-    "rewrites": [{ "source": "/", "destination": "/Proposal.html" }]
-  }
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+
   
